⚡️ :: (#87) <ShareDreamFindService> 변환 메서드로 리팩터링