@@ -26,19 +26,8 @@ public class ShareDreamFindServiceImpl implements ShareDreamFindService {
         Pageable request = PageRequest.of(page, size, Sort.by("shareDateTime").descending());
         Page<ShareDream> shareDreamPage = shareDreamRepository.findByIsSharedIsTrue(request);
 
-        List<ShareDreamResponse> shareDreamGroup = shareDreamPage.map(sd -> ShareDreamResponse.builder()
-                .uuid(sd.getUuid())
-                .title(sd.getTitle())
-                .profile(sd.getUser().getProfile())
-                .isShared(sd.getIsShared())
-                .lucyCount(sd.getLucyCount())
-                .dreamTypes(sd.getDreamTypes()
-                        .stream()
-                        .map(DreamType::getCode)
-                        .collect(Collectors.toList()))
-                .defaultPostingImage(sd.getDefaultImage())
-                .shareDateTime(sd.getShareDateTime())
-                .build()).toList();
+        List<ShareDreamResponse> shareDreamGroup = shareDreamPage
+                .map(ShareDreamResponse::of).toList();
 
         return ShareDreamGroupResponse.builder()
                 .shareDreams(shareDreamGroup)
